fixing image size on smaller screens for homepage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -354,7 +354,7 @@ footer {
     margin-top: 6rem;
   }
   .blog-content-item img {
-    width: 100%;
+    width: 50%;
   }
   .side-content {
     padding-left: 0;
